# unifi-protect-sensors

./: .gitignore  LAND.md  README.md  hacs.json  pyproject.toml
.cursor/skills/hacs-release-workflow/: SKILL.md
.github/workflows/: release.yml
.venv_test/: pyvenv.cfg
custom_components/unifi_protect_sensors/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator 2.py  coordinator.py  helpers 2.py  helpers.py  manifest.json  protect_ws.py  sensor.py  strings.json
docs/: CHANGELOG.md  ENTITIES.md  PAYLOAD_GUIDE.md  TESTING.md
scripts/: setup-github-auth.sh
tests/: __init__.py  conftest.py  test_coordinator.py  test_dynamic_discovery.py  test_init_migration.py  test_protect_ws.py  test_sensor_descriptions.py
tests/fixtures/: up_airquality.json  usl_environmental.json
